add count notebook

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,7 @@
-# Your Azure Speech Service subscription key
-SPEECH_KEY=<YOUR AZURE SPEECH SERVICE SUBSCRIPTION KEY>
-
-# Your Azure Speech Service region
-SPEECH_REGION=<YOUR AZURE SPEECH SERVICE REGION>
-
-# Your Azure Machine Learning workspace key
-INTENT_KEY=<YOUR AZURE MACHINE LEARNING WORKSPACE KEY>
-
-# Your Azure OpenAI API key
-OPENAI_KEY=<YOUR AZURE OPENAI API KEY>
+# Azure Open AI Completion Configuration
+AZURE_OPENAI_KEY="your_azure_openai_key"  # Replace with your Azure OpenAI Key
+AZURE_AOAI_CHAT_MODEL_NAME_DEPLOYMENT_ID="your_chat_model_name_deploiment_id"  # Optional
+AZURE_AOAI_COMPLETION_MODEL_DEPLOYMENT_ID="your_completion_model_deployment_id"  # Optional
+AZURE_AOAI_EMBEDDING_DEPLOYMENT_ID="your_azure_aoai_embedding_deployment_id"  # Optional
+AZURE_OPENAI_API_ENDPOINT="your_azure_openai_api_endpoint"  # Replace with your Azure OpenAI API Endpoint
+AZURE_OPENAI_API_VERSION="your_azure_openai_api_version"  # Replace with your Azure OpenAI API Version
