--- a/.github/workflows/main_staging_ci.yml
+++ b/.github/workflows/main_staging_ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - staging
+      - feature/count_num_tokens
 
 jobs:
   quality-checks:
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Conda 🔧
         uses: conda-incubator/setup-miniconda@v2
         with:
-          environment-file: speech-ai-azure-services  # Create an environment.yml file
+          environment-file: aoai-faq  # Create an environment.yml file
           activate-environment: 
           auto-activate-base: false
 
@@ -39,25 +39,11 @@ jobs:
       - name: Run Black Check 🌚
         run: black --check .
 
-      - name: Run flake8 ✅
-        run: flake8 . --max-line-length=124
-
       - name: Run ruff Check 🧼
-        run: ruff --fix --exit-non-zero-on-fix .
+        run: ruff --check .
 
       - name: Run interrogate Check 🔍
-        run: interrogate src -v -i --fail-under=60 -e '**/__init__.py'
-
-      - name: Bandit Security Linter Check 🔒
-        run: bandit -c pyproject.toml -r .
+        run: interrogate src -v -i --fail-under=80 -e 'src/**/__init__.py'
 
       - name: Run Pytest 🧪
         run: pytest tests/
-
-  deployment:
-    name: deploy
-    runs-on: ubuntu-latest
-    needs: quality-checks
-    steps:
-      - name: Deploy to production
-        run: echo deploying
